# OOP

include/: hexagon.h  octagon.h  point.h
lab03/src/: main.cpp  octagon.cpp
lab04/include/: figure.h
lab_01/: CMakeLists.txt
lab_01/include/: chocolate.h
lab_01/src/: CMakeLists.txt  chocolate.cpp  main.cpp
lab_02/: CMakeLists.txt
lab_02/include/: six.h
lab_02/src/: main.cpp  six.cpp
lab_02/test/: test.cpp
lab_03/: CMakeLists.txt
lab_03/include/: figure.h  triangle.h
lab_03/src/: hexagon.cpp  point.cpp
lab_03/test/: CMakeLists.txt  test.cpp
lab_04/: CMakeLists.txt
lab_04/include/: hexagon.h  octagon.h  triangle.h  vector.h
lab_04/src/: main.cpp
lab_04/test/: test.cpp
lab_05/: CMakeLists.txt
lab_05/include/: allocator.hpp  vector.hpp
lab_05/src/: main.cpp
lab_05/test/: test.cpp
lab_06/: CMakeLists.txt
lab_06/include/: NPC.hpp  bear.hpp  elf.hpp  factory.hpp  observer.hpp  thug.hpp
lab_06/src/: bear.cpp  elf.cpp  factory.cpp  main.cpp  observer.cpp  thug.cpp
lab_06/test/: test.cpp
lab_07/: CMakeLists.txt
lab_07/include/: bear.hpp  elf.hpp  npc.hpp  thug.hpp
lab_07/src/: bear.cpp  elf.cpp  main.cpp  npc.cpp  thug.cpp
lab_07/test/: CMakeLists.txt  test.cpp
src/: hexagon.cpp  main.cpp  triangle.cpp
